# DeWord

./: .gitignore  README.md  package-lock.json  package.json  server.js  start-debei.bat  vite.config.ts
data/: seed-vocabulary.json
docs/: implementation-plan.md  product-plan.md
public/: app.js  index.html  styles.css
scripts/: start-debei.ps1  stop-debei.ps1
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/data/: store.js
src/domain/: scheduler.js
tests/: scheduler.test.js
