[package]
name = "deword"
version = "0.1.0"
description = "A personal high-efficiency English vocabulary trainer"
authors = ["Codex"]
edition = "2021"

[lib]
name = "deword_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [] }
tauri-plugin-opener = "2.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
